gl31-master/src/test/deca/syntax/valid/sansobjet/inequality_expr3.deca
// Description:
//    tests de programme correct syntaxiquement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021
{
    int a = 2;

    while(a <= 4 && a >= 0){
        a = a + 1;
    }
}
