gl31-master/src/test/deca/syntax/invalid/complet/meth_noname.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 10 : Erreur, méthode mal déclarée
//
// Historique:
//    cree le 19/01/2021
class Test{
    void (int param){
        
    }
}
